1035 feature request allow multiple transport modes per trip (#1184)