@@ -19,6 +19,7 @@ import java.sql.Timestamp;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -176,7 +177,17 @@ public class ProcessedVisitJdbcService {
                 "FROM processed_visits pv " +
                 "WHERE pv.id = ?";
         List<ProcessedVisit> results = jdbcTemplate.query(sql, PROCESSED_VISIT_ROW_MAPPER, id);
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
+    }
+
+    public Map<Long, ProcessedVisit> findByIds(List<Long> ids) {
+        if (ids == null || ids.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        String placeholders = String.join(",", ids.stream().map(id -> "?").toList());
+        String sql = "SELECT pv.* FROM processed_visits pv WHERE pv.id IN (" + placeholders + ")";
+        List<ProcessedVisit> list = jdbcTemplate.query(sql, PROCESSED_VISIT_ROW_MAPPER, ids.toArray());
+        return list.stream().collect(Collectors.toMap(ProcessedVisit::getId, v -> v));
     }
 
     public void deleteAll(List<ProcessedVisit> processedVisits) {
